objects/MFG_IoT_Event__c.object
<CustomObject>
    <fields>
        <fullName>MFG_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MFG_Code_Description__c</fullName>
        <label>Code Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MFG_Code__c</fullName>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Events</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSS-{0000000}</displayFormat>
        <label>IoT Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>